Gencode/Test/Invalide/test_division_par_zero.deca


int res;
{
     
     res = 21/0;
   

}
